# admin-toolkit

./: .gitignore  .pylintrc  invoke.yaml  main.py  setenv.sh  setup.cfg  setup_data.py  test-mdraid.py  test.py
.github/: copilot-instructions.md
AdminToolkit/: __init__.py  cli.py  common_path.py  config.py  danger.py  mockup_config.py  object.py  printer.py
AdminToolkit/backup/: rsync.py
AdminToolkit/cache/: __init__.py
AdminToolkit/cli/: __init__.py
AdminToolkit/common/: danger.py  format.py  object.py  printer.py  subprocess.py
AdminToolkit/config/: README.md  common_path.py  config.py  mockup_config.py  units.py
AdminToolkit/filesystem/: tree.py  walker.py
AdminToolkit/find/: filter.py  object.py
AdminToolkit/interface/: device.py  du.py  hardware.py  lvm.md  lvm.py  mount.py  network.py  partition.py  system.py  user.py
AdminToolkit/interface/disk/: device.py  df.py  du.py  filesystem.py  locate.py  lvm.py  mdraid.py  mount.py  partition.md  partition.py  tool.py
AdminToolkit/scripts/: README.md  cli.py  run.py
AdminToolkit/tools/: danger.py  dict.py  format.py  memory.py  mockup.py  object.py  parse.py  subprocess.py  walker.py
CliCommands/: __init__.py  backup.py  device.py  devices.py  filesystem.py  system.py  user.py
doc/sphinx/source/: README.md  conf.py  index.rst  reference-manual.rst
doc/sphinx/source/themes/ProjectRtd/: theme.conf
doc/sphinx/source/themes/ProjectRtd/static/css/: Project.css
notes/: device.md  done.md
standalone-scritps/: rmp
tasks/: __init__.py  clean.py  doc.py
tests/: test-danger.py  test-dataclass.py  test-file-size.py  test-lvm.py  test-msdos-partition.py  test-node-modules.py  test-walker.py  xterm-256-test
