# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = Scraper
version = attr: Scraper.__version__
url = https://github.com/FabriceSalvaire/Scraper
# download_url =
project_urls =
    Documentation = https://scraper.fabrice-salvaire.fr
    Code = https://github.com/FabriceSalvaire/Scraper
    Issue Tracker = https://github.com/FabriceSalvaire/Scraper/issues
    # Forum =
license = AGPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice Salvaire
author_email = scraper@fabrice-salvaire.fr
maintainer = Fabrice Salvaire
maintainer_email = scraper@fabrice-salvaire.fr
description = ...
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = data scraping
classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
python_requires = >=3.10
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML>=5.3
    cffi>=1.14
    matplotlib>=3.2
    numpy>=1.18
    ply>=3.11
    scipy>=1.4
    requests>=2.23
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    unit-test

[options.package_data]
Scraper.Config = logging.yml

[options.entry_points]
# console_scripts =
#     foo = Scraper.Scripts.foo:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E226 missing whitespace around arithmetic operator
# E302  expected 2 blank lines
# E303  too many blank lines
# E305 expected 2 blank lines after class or function definition
# E402  module level import not at top of file
ignore = E226, E302, E303, E305, E402, ANN101

[pylint.message]
# module-naming-style=PascalCase
max-line-length = 120
disable =
	missing-class-docstring,
	missing-function-docstring,
	missing-module-docstring,
	wrong-import-position,
	wrong-import-order